# kiro-kizuma

./: .env.customer_health.example  .env.example  .gitignore  KIRO.md  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  task.md
.github/workflows/: customer-relationship-health.yml  monthly.yml
customer_health/: __init__.py  __main__.py  jira_client.py  llm.py  service.py  settings.py  temperature.py  webapp.py
docs/kizuma/: deploy-render.md
docs/superpowers/plans/: 2026-06-11-gitbook-scraper.md  2026-06-27-customer-relationship-health.md
docs/superpowers/specs/: 2026-06-11-gitbook-scraper-design.md
kiro/: __init__.py  __main__.py
kiro/application/: lint_rules.py  normalization.py  pipeline.py  style_reference.py
kiro/config/: __init__.py  settings.py
kiro/domain/: __init__.py  exceptions.py  models.py
kiro/infrastructure/: confluence_client.py  confluence_kb_loader.py  docx_exporter.py  gitbook_loader.py  jira_client.py  persistence.py  slack_client.py
kiro/interfaces/: cli.py
kiro/utils/: adf.py  branding.py  logging.py  progress.py
scripts/: kizuma.sh
tests/: conftest.py  test_adf.py  test_anthropic_parser.py  test_cli.py  test_clustering.py  test_confluence_kb_loader.py  test_customer_faq.py  test_gemini_parser.py  test_gitbook_loader.py  test_kb_context.py  test_lint_rules.py  test_normalization.py  test_persistence.py  test_pipeline_lint.py  test_pipeline_rag.py  test_pipeline_style.py  test_provider_factory.py  test_settings.py  test_style_examples.py  test_style_reference.py
(+11 files in other folders)
